# llmdocs

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
docker/: entrypoint.sh  llmdocs.yaml
docs/: index.md  llmdocs.yaml
docs/community/: code-of-conduct.md  license.md  security.md
docs/contributing/: contributing.md  development.md
docs/deployment/: docker.md  hosting.md  railway.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: configuration.md  mcp-clients.md  workflow.md
docs/reference/: cli.md  http.md  mcp.md
example/: README.md  demo_index.py  llmdocs.yaml  run.sh
example/docs/: admin-api.md  authentication.md  configuration.md  deployment.md  index.md  installation.md
example/docs/core-concepts/: concepts.md  rate-limiting.md
example/docs/getting-started/: quickstart.md
example/docs/reference/: plugins.md
llmdocs/: __init__.py  cli.py  config.py  doc_paths.py  hasher.py  indexer.py  llms_txt.py  mcp.py  mcp_runtime.py  mcp_tools.py  mcp_wiring.py  models.py  parser.py  search.py  server.py
llmdocs/indexing/: __init__.py  chunker.py  indexer.py  parser.py  search.py
llmdocs/mcp/: __init__.py  runtime.py  tools.py
tests/: __init__.py  conftest.py  test_chunker.py  test_cli.py  test_config.py  test_hasher.py  test_indexer.py  test_llms_txt.py  test_mcp.py  test_models.py  test_parser.py  test_search.py  test_server.py
tests/fixtures/: sample_doc.md
(+1 files in other folders)
