[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmdocs-mcp"
version = "0.2.2"
description = "Agent-first documentation platform (CLI and server)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "llmdocs contributors" }]
keywords = ["documentation", "mcp", "ai-agents", "search", "vector-database"]

# Runtime: installed via `pip install llmdocs` — CLI entrypoint only for end users.
dependencies = [
    "fastmcp>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "openai>=1.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "rank-bm25>=0.2.2",
    "python-frontmatter>=1.1.0",
    "tiktoken>=0.7.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
# Primary user interface after `pip install llmdocs` — not an importable SDK.
llmdocs = "llmdocs.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmdocs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --cov=llmdocs --cov-report=term-missing"
asyncio_mode = "auto"
